# gamlss_rs

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: derivatives.rs
benchmark/: Cargo.toml  README.md  pyproject.toml  run_comparison.sh
benchmark/output/: comparison_summary.json  data_beta_linear.parquet  data_gamma_linear.parquet  data_gamma_smooth.parquet  data_gaussian_heteroskedastic.parquet  data_gaussian_large.parquet  data_gaussian_linear.parquet  data_gaussian_multiple.parquet  data_gaussian_quadratic.parquet  data_gaussian_smooth.parquet  data_negative_binomial_linear.parquet  data_negative_binomial_smooth.parquet  data_poisson_linear.parquet  data_poisson_smooth.parquet  data_studentt_linear.parquet  data_studentt_smooth.parquet  r_result_beta_linear.json  r_result_gamma_linear.json  r_result_gamma_smooth.json  r_result_gaussian_heteroskedastic.json  r_result_gaussian_large.json  r_result_gaussian_linear.json  r_result_gaussian_multiple.json  r_result_gaussian_quadratic.json  r_result_gaussian_smooth.json  r_result_negative_binomial_linear.json  r_result_negative_binomial_smooth.json  r_result_poisson_linear.json  r_result_poisson_smooth.json  r_result_studentt_linear.json  r_result_studentt_smooth.json  rust_result_beta_linear.json  rust_result_gamma_linear.json  rust_result_gamma_smooth.json  rust_result_gaussian_heteroskedastic.json  rust_result_gaussian_large.json  rust_result_gaussian_linear.json  rust_result_gaussian_multiple.json  rust_result_gaussian_quadratic.json  rust_result_gaussian_smooth.json  (+20 more)
docs/: mathematics.md
examples/: gamlss_fit.rs  glissando_fit.rs
ext_benchmark/: Cargo.toml  fit_mgcv.R  main.py  orchestrate.py  run_comparison.sh
pkg/: .gitignore  README.md  glissando.d.ts  glissando.js  glissando_bg.js  glissando_bg.wasm  glissando_bg.wasm.d.ts  package.json
src/: diagnostics.rs  distributions.rs  error.rs  families.rs  fitting.rs  lib.rs  linalg.rs  math.rs  python.rs  splines.rs  terms.rs  types.rs  wasm.rs
src/fitting/: assembler.rs  inference.rs  mod.rs  solver.rs
src/preprocessing/: mod.rs
tests/: comprehensive.rs  diagnostics.rs  edge_cases.rs  parameter_recovery.rs  prediction.rs  validation.rs
tests/common/: mod.rs
