[package]
name = "real_rusty_gam"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { version = "0.8" }
bspline = { version = "0.4" }
ndarray = { version = "0.15"}
ndarrray-linarg = { version = "0.16", features = ["blas"] }
polars = { version = "0.40.0", features = ["ndarray", "lazy", "strings"] }
rand = { version = "0.8" }
rand_distr = { version = "1.0" }
thiserror = { version = "1.0" }