[package]
name = "real_rusty_gam"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { version = "0.8.1" }
ndarray = { version = "0.15", features = ["blas"] }
ndarray-linalg = { version = "0.16.0" }
polars = { version = "0.40.0", features = ["ndarray", "lazy", "strings"] }
rand = { version = "0.8" }
rand_distr = { version = "0.5.1" }
thiserror = { version = "1.0" }