[package]
name = "gamlss_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = { version = "0.11.0"}
ndarray = { version = "0.16", features = ["rayon"] }
rand = { version = "0.9.2" }
rand_distr = { version = "0.5.1" }
rayon = { version = "1.10" }
statrs = { version = "0.18.0" }
thiserror = { version = "2.0.18" }

[dependencies.argmin-math]
version = "0.5.1"
features = ["ndarray_v0_16"]

[dependencies.polars]
version = "0.49.1"
features = ["ndarray", "lazy", "strings", "dtype-categorical"]

[dependencies.ndarray-linalg]
version = "0.17.0"
features = ["openblas-system"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "derivatives"
harness = false