[package]
name = "glissando_benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compare_fit"
path = "src/bin/compare_fit.rs"

[dependencies]
glissando = { path = ".." }
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.49.1", features = ["ndarray", "lazy", "parquet"] }
